--- a/package.json
+++ b/package.json
@@ -1,34 +1,47 @@
 {
-  "name": "angular2-boilerplate",
+  "name": "word-addin-ang2-word-to-md",
   "version": "1.0.0",
   "scripts": {
-    "lite": "lite-server",
+    "lite": "lite-server -c gulp.config.json",
     "gulp": "gulp",
-    "start": "concurrent \"npm run gulp\" \"npm run lite\" "
+    "postinstall": "typings install",
+    "start": "concurrent \"npm run gulp\" \"npm run lite\" ",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
+    "typings": "typings"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
-    "angular2": "2.0.0-beta.14",
-    "systemjs": "0.19.25",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "systemjs": "0.19.27",
     "es6-shim": "^0.35.0",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.6"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.7",
+    "office-ui-fabric": "^2.4.1",
+    "lodash": "^4.12.0"
   },
   "devDependencies": {
+    "concurrently": "^2.0.0",
+    "lite-server": "^2.1.0",
+    "typings": "^0.8.1",
     "autoprefixer": "^6.3.5",
     "cssnano": "^3.4.0",
-    "concurrently": "^2.0.0",
     "gulp": "^3.9.0",
-    "gulp-ext-replace": "^0.2.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-postcss": "^6.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.10.0",
     "gulp-uglify": "^1.5.1",
-    "lite-server": "^2.1.0",
-    "postcss": "^5.0.13",
-    "postcss-scss": "^0.1.3",
-    "precss": "^1.3.0"
+    "gulp-sass": "^2.3.1",
+    "del": "^2.2.0",
+    "merge2": "^1.0.2"
   }
 }
