--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.7",
-    "office-ui-fabric": "^2.4.1",
-    "lodash": "^4.12.0"
+    "angular2-in-memory-web-api": "0.0.7",    
+    "lodash": "^4.12.0",
+    "es6-promise": "^3.1.2",
+    "jquery": "^2.2.3"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
