--- a/.gitignore
+++ b/.gitignore
@@ -49,14 +49,8 @@ $RECYCLE.BIN/
 *.lnk
 
 # Ignore the following folders
-node_modules/**
-bower_components/**
-www/**
-platforms/**
-typings/**
-obj/**
-bld/**
-bin/**
 .vs/**
 .idea/**
 *.log.*
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/obj/Debug
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/node_modules
