copied required files

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,4 @@ $RECYCLE.BIN/
 *.log.*
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/obj/Debug
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/node_modules
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/typings
