--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/Properties/launchSettings.json
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/Properties/launchSettings.json
@@ -9,8 +9,8 @@
   },
   "profiles": {
     "node": {
-      "executablePath": "%APPDATA%\\npm\\gulp.cmd",
-      "commandLineArgs": "serve",
+      "executablePath": "%PROGRAMFILES%/nodejs/npm",
+      "commandLineArgs": "start",
       "launchUrl": "http://localhost:3000/project_readme.html",
       "environmentVariables": {
         "Hosting:Environment": "Development"
