--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,6 @@ $RECYCLE.BIN/
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/obj/Debug
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/node_modules
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/typings
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/obj/Debug/dnx451
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/bin/Debug/dnx451
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD.csproj.user
