--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ $RECYCLE.BIN/
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/obj/Debug/dnx451
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/bin/Debug/dnx451
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD.csproj.user
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/wwwroot
