updating ignore files

--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/gulp.config.json
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/gulp.config.json
@@ -9,7 +9,7 @@
   },
   "port": 8080,
   "files": [
-    "./wwwroot/**/*.{html,css,js}"
+    "./src/**/*.{html,scss,ts}"
   ],
   "server": { "baseDir": "./wwwroot" }
 }
