--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ $RECYCLE.BIN/
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/bin/Debug/dnx451
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD.csproj.user
 /Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/wwwroot
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/npm-debug.log
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/bin/Debug/Document1.docx
+/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD/bin/Debug/Word-Addin-Ang2-Word-to-MD.debugapp
