--- a/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/package.json
+++ b/Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MDWeb/package.json
@@ -18,6 +18,7 @@
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
     "@angular/http": "2.0.0-rc.1",
+    "@angular/platfrom-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
     "rxjs": "5.0.0-beta.6",
