--- a/Word-Addin-Ang2-Word-to-MDWeb/package.json
+++ b/Word-Addin-Ang2-Word-to-MDWeb/package.json
@@ -18,14 +18,19 @@
     "@angular/compiler": "2.0.0-rc.1",
     "@angular/core": "2.0.0-rc.1",
     "@angular/http": "2.0.0-rc.1",
-    "@angular/platfrom-browser": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
-    "rxjs": "5.0.0-beta.6",
-    "underscore": "^1.8.3",
+
+    "core-js": "^2.4.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.8",
+    "zone.js": "^0.6.12",
+
     "jquery": "^2.2.3",
+    "marked": "^0.3.5",
     "office-ui-fabric": "^2.6.0",
-    "marked": "^0.3.5"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
