--- a/Word-Addin-Ang2-Word-to-MDWeb/project.json
+++ b/Word-Addin-Ang2-Word-to-MDWeb/project.json
@@ -5,9 +5,7 @@
   },
 
   "dependencies": {
-    "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final"
+    "Microsoft.AspNet.Hosting": "1.0.0-rc1-final"
   },
 
   "commands": {
@@ -15,8 +13,13 @@
   },
 
   "frameworks": {
-    "dnx451": { },
-    "dnxcore50": { }
+    "dnx451": {
+      "dependencies": {
+        "Microsoft.AspNet.Http.Abstractions": "1.0.0-rc1-final",
+        "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final"
+      }
+    }
   },
 
   "exclude": [
