Renaming and updating project to newer version of Angular2 Template

--- a/.gitignore
+++ b/.gitignore
@@ -52,13 +52,13 @@ $RECYCLE.BIN/
 .vs/**
 .idea/**
 *.log.*
-Word-Addin-Ang2-Word-to-MD/obj/Debug
-Word-Addin-Ang2-Word-to-MDWeb/node_modules
-Word-Addin-Ang2-Word-to-MDWeb/typings
-Word-Addin-Ang2-Word-to-MDWeb/obj/Debug/dnx451
-Word-Addin-Ang2-Word-to-MDWeb/bin/Debug/dnx451
-Word-Addin-Ang2-Word-to-MD/Word-Addin-Ang2-Word-to-MD.csproj.user
-Word-Addin-Ang2-Word-to-MDWeb/wwwroot
-Word-Addin-Ang2-Word-to-MDWeb/npm-debug.log
-Word-Addin-Ang2-Word-to-MD/bin/Debug/Document1.docx
-Word-Addin-Ang2-Word-to-MD/bin/Debug/Word-Addin-Ang2-Word-to-MD.debugapp
+WordToGitHubAddIn/obj/**
+WordToGitHubAddIn/bin/**
+WordToGitHubAddIn/*.user
+WordToGitHub/obj/**
+WordToGitHub/bin/**
+WordToGitHub/*.user
+WordToGitHub/node_modules
+WordToGitHub/typings
+WordToGitHub/wwwroot
+WordToGitHub/npm-debug.log
