--- a/WordToGitHub/Properties/launchSettings.json
+++ b/WordToGitHub/Properties/launchSettings.json
@@ -1,4 +1,12 @@
 {
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:52551/",
+      "sslPort": 0
+    }
+  },
   "profiles": {
     "node": {
       "executablePath": "C:/Program Files/nodejs/npm.cmd",
