--- a/WordToGitHub/tsconfig.json
+++ b/WordToGitHub/tsconfig.json
@@ -7,11 +7,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
+    "noImplicitAny": false,
+    "rootDir": "./src",
+    "outDir": "./wwwroot"
   },
   "exclude": [
-    "node_modules",
-    "typings/main",
-    "typings/main.d.ts"
+    "node_modules"
   ]  
 }
