--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -31,6 +31,8 @@
 
     "angular2-in-memory-web-api": "0.0.9",
     "jquery": "^2.2.3",
+    "underscore": "^1.8.3",
+    "marked": "^0.3.5",
     "office-ui-fabric": "^2.6.0"
   },
   "devDependencies": {
