--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -33,6 +33,7 @@
     "jquery": "^2.2.3",
     "underscore": "^1.8.3",
     "marked": "^0.3.5",
+    "to-markdown": "^3.0.0",
     "office-ui-fabric": "^2.6.0"
   },
   "devDependencies": {
