--- a/WordToGitHub/project.json
+++ b/WordToGitHub/project.json
@@ -12,7 +12,9 @@
     "Microsoft.AspNetCore.Server.Kestrel": "1.0.0-rc2-final",
     "Microsoft.AspNetCore.StaticFiles": "1.0.0-rc2-final",
     "Microsoft.Extensions.Configuration.FileExtensions": "1.0.0-rc2-final",
-    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-final"
+    "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.0.0-rc2-final",
+    "System.Net.Http": "4.0.0",
+    "Nito.AsyncEx": "3.0.1"
   },
 
   "tools": {
