--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -28,6 +28,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
+    "es6-promise": "^3.2.1",
 
     "angular2-in-memory-web-api": "0.0.9",
     "jquery": "^2.2.3",
