--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -45,6 +45,8 @@
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.4",
-    "gulp-sass": "^2.3.1"
+    "gulp-sass": "^2.3.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-concat": "^2.6.0"
   }
 }
