updating routing methods and pacakges

--- a/WordToGitHub/tsconfig.json
+++ b/WordToGitHub/tsconfig.json
@@ -9,7 +9,8 @@
     "removeComments": false,
     "noImplicitAny": false,
     "rootDir": "./src",
-    "outDir": "./wwwroot"
+    "outDir": "./wwwroot",
+    "noEmitOnError": true
   },
   "exclude": [
     "node_modules"
