--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -26,7 +26,7 @@
     "systemjs": "^0.19.31",
     "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
     "es6-promise": "^3.2.1",
 
