updating meta information and making names uniform

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ WordToGitHub/npm-debug.log
 /WordToGitHub/certificates/server.csr
 /WordToGitHub/certificates/server.crt
 /WordToGitHub/certificates/server.pass.key
+/WordToGitHubAddIn/pkgobj/Release
