--- a/WordToGitHub/project.json
+++ b/WordToGitHub/project.json
@@ -1,7 +1,7 @@
 {
-  "title": "WordToGitHub",
+  "title": "markdown-editor-for-word",
   "copyright": "Microsoft 2016",
-  "description": "A Word add-in that connects to GitHub",
+  "description": "Author your markdown files and push your changes to GitHub directly from Word - your favourite document editor.",
   "language": "en",
   "dependencies": {
     "Microsoft.NETCore.App": {
