--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -34,12 +34,12 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "typings": "^1.3.0",
-    "rimraf": "^2.5.2",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "gulp-sass": "^2.3.2",
     "gulp-autoprefixer": "^3.1.0",
-    "gulp-concat": "^2.6.0"
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^1.5.4"
   }
 }
