--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.4.0",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
+    "reflect-metadata": "^0.1.3",
 
     "jquery": "^3.0.0",
     "underscore": "^1.8.3",
@@ -32,6 +33,7 @@
   },
   "devDependencies": {
     "browser-sync": "^2.13.0",
+    "connect-history-api-fallback": "^1.2.0",
     "typings": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
