--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -4,10 +4,10 @@
   "repository": "",
   "version": "1.0.0",
   "scripts": {
-    "gulp": "gulp serve",
-    "start": "npm run gulp",
-    "postinstall": "typings install",
-    "typings": "typings"
+    "start": "webpack-dev-server --inline --progress --port 3000",
+    "test": "karma start",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "postinstall": "typings install"
   },
   "license": "MIT",
   "dependencies": {
