--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -30,11 +30,14 @@
     "office-ui-fabric": "^2.6.1"
   },
   "devDependencies": {
+"codelyzer": "^0.0.26",
     "resolve-url-loader": "^1.6.0",
     "perfectionist": "^2.1.3",
     "node-sass": "^3.8.0",
     "precss": "^1.4.0",
     "autoprefixer": "^6.3.7",
+    "exports-loader": "^0.6.3",
+    "imports-loader": "^0.6.5",
     "angular2-template-loader": "^0.4.0",
     "css-loader": "^0.23.1",
     "postcss-loader": "^0.9.1",
@@ -49,10 +52,13 @@
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.1",
+    "source-map-loader": "^0.1.5",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0"
+    "webpack-merge": "^0.14.0",
+    "tslint": "^3.13.0",
+    "copy-webpack-plugin": "^3.0.1"
   }
 }
