--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -4,9 +4,9 @@
   "repository": "",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack-dev-server --https --hot --inline --progress --port 3000",
+    "start": "webpack-dev-server --https --hot --inline --progress --compress --port 3000 --cert certificates/localhost.crt --key certificates/localhost.key --open",
     "test": "karma start",
-    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail --colors --display-chunks --display-modules",
     "postinstall": "typings install"
   },
   "license": "MIT",
