Adding launch configuration and also updating typescript transpilation process

--- a/WordToGitHub/tsconfig.json
+++ b/WordToGitHub/tsconfig.json
@@ -9,8 +9,7 @@
     "removeComments": false,
     "noImplicitAny": false,
     "rootDir": "./src",
-    "outDir": "./wwwroot",
-    "noEmitOnError": true
+    "outDir": "./wwwroot"    
   },
   "exclude": [
     "node_modules"
