--- a/WordToGitHub/.vscode/launch.json
+++ b/WordToGitHub/.vscode/launch.json
@@ -2,21 +2,28 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Launch Chrome against localhost, with sourcemaps",
+            "name": "Launch Chrome",
             "type": "chrome",
             "request": "launch",
             "url": "https://localhost:3000/#/",
             "sourceMaps": true,
-            "webRoot": "${workspaceRoot}/wwwroot",
-            "diagnosticLogging": true
+            "webRoot": "${workspaceRoot}/wwwroot"
+        },        
+        {
+            "name": "Launch Edge",
+            "type": "edge",
+            "request": "launch",
+            "url": "https://localhost:3000/#/",
+            "sourceMaps": true,
+            "webRoot": "${workspaceRoot}/wwwroot"
         },
         {
-            "name": "Attach to Chrome, with sourcemaps",
-            "type": "chrome",
+            "name": "Attach to AddIn",
+            "type": "edge",
             "request": "attach",
             "port": 9222,
-            "sourceMaps": true,
             "url": "https://localhost:3000/#/",
+            "sourceMaps": true,
             "webRoot": "${workspaceRoot}/wwwroot",
             "diagnosticLogging": true
         }
