--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -5,9 +5,11 @@
   "version": "1.0.0",
   "scripts": {
     "gulp": "gulp serve",
-    "start": "npm run gulp",
+    "start": "tsc && concurrently \"npm run gulp\" \"npm run tsc:w\"",
     "postinstall": "typings install",
-    "typings": "typings"
+    "typings": "typings",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
   },
   "license": "MIT",
   "dependencies": {
@@ -31,15 +33,16 @@
     "office-ui-fabric": "^2.6.1"
   },
   "devDependencies": {
+    "concurrently": "^2.2.0",
     "browser-sync": "^2.13.0",
     "connect-history-api-fallback": "^1.2.0",
+    "typescript": "^1.8.10",
     "typings": "^1.3.0",
-    "gulp": "^3.9.1",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
+    "gulp": "^3.9.1",    
     "gulp-sass": "^2.3.2",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.5.4"
+    "gulp-uglify": "^1.5.4",
+    "gulp-debug": "^2.1.2"
   }
 }
