--- a/WordToGitHub/tsconfig.json
+++ b/WordToGitHub/tsconfig.json
@@ -8,9 +8,7 @@
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false,
-    "noEmitOnError": true,
-    "rootDir": "src",
-    "outDir": "dist"
+    "rootDir": "src"
   },
   "exclude": [
     "node_modules"
