--- a/WordToGitHub/package.json
+++ b/WordToGitHub/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.2",
-    "reflect-metadata": "^0.1.3",
+    "applicationinsights-js": "^1.0.0",
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
     "jquery": "^3.0.0",
-    "underscore": "^1.8.3",
     "marked": "^0.3.5",
+    "office-ui-fabric": "^2.6.1",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
     "to-markdown": "^3.0.0",
-    "office-ui-fabric": "^2.6.1"
+    "underscore": "^1.8.3",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "tslint": "^3.14.0",
