--- a/MarkdownEditorForWord/package.json
+++ b/MarkdownEditorForWord/package.json
@@ -12,53 +12,52 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/forms": "0.2.0",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-
-    "reflect-metadata": "^0.1.3",
-    "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.6",
-    "zone.js": "^0.6.12",
-    "jquery": "^3.0.0",
+    "@angular/common": "^2.1.1",
+    "@angular/compiler": "^2.1.1",
+    "@angular/core": "^2.1.1",
+    "@angular/forms": "^2.1.1",
+    "@angular/http": "^2.1.1",
+    "@angular/platform-browser": "^2.1.1",
+    "@angular/platform-browser-dynamic": "^2.1.1",
+    "@angular/router": "^3.1.1",
+    "reflect-metadata": "^0.1.8",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.26",
+    "jquery": "^3.1.1",
     "underscore": "^1.8.3",
-    "marked": "^0.3.5",
-    "to-markdown": "^3.0.0",
-    "office-ui-fabric": "^2.6.1"
+    "marked": "^0.3.6",
+    "to-markdown": "^3.0.2",
+    "office-ui-fabric": "^2.6.2"
   },
   "devDependencies": {
     "resolve-url-loader": "^1.6.0",
-    "perfectionist": "^2.1.3",
-    "node-sass": "^3.8.0",
+    "perfectionist": "^2.3.1",
+    "node-sass": "^3.10.1",
     "precss": "^1.4.0",
-    "autoprefixer": "^6.3.7",
+    "autoprefixer": "^6.5.1",
     "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
-    "angular2-template-loader": "^0.4.0",
-    "css-loader": "^0.23.1",
-    "postcss-loader": "^0.9.1",
-    "sass-loader": "^4.0.0",
+    "angular2-template-loader": "^0.5.0",
+    "css-loader": "^0.25.0",
+    "postcss-loader": "^1.0.0",
+    "sass-loader": "^4.0.2",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.22.0",
     "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.7",
+    "phantomjs-prebuilt": "^2.1.13",
     "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "ts-loader": "^0.8.1",
+    "ts-loader": "^0.9.5",
     "source-map-loader": "^0.1.5",
-    "typescript": "^1.8.10",
-    "typings": "^1.0.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^0.15.0",
     "copy-webpack-plugin": "^3.0.1"
   }
 }
