--- a/MarkdownEditorForWord/package.json
+++ b/MarkdownEditorForWord/package.json
@@ -20,15 +20,16 @@
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/router": "^3.1.1",
-    "reflect-metadata": "^0.1.8",
+    "@microsoft/office-js-helpers": "^0.1.8",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.12",
-    "zone.js": "^0.6.26",
     "jquery": "^3.1.1",
-    "underscore": "^1.8.3",
     "marked": "^0.3.6",
+    "office-ui-fabric": "^2.6.2",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "5.0.0-beta.12",
     "to-markdown": "^3.0.2",
-    "office-ui-fabric": "^2.6.2"
+    "underscore": "^1.8.3",
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "resolve-url-loader": "^1.6.0",
