--- a/MarkdownEditorForWord/package.json
+++ b/MarkdownEditorForWord/package.json
@@ -20,25 +20,21 @@
     "@angular/platform-browser": "^2.1.1",
     "@angular/platform-browser-dynamic": "^2.1.1",
     "@angular/router": "^3.1.1",
-    "@microsoft/office-js-helpers": "^0.1.8",
-    "core-js": "^2.4.1",
-    "jquery": "^3.1.1",
-    "marked": "^0.3.6",
-    "office-ui-fabric": "^2.6.2",
-    "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
+    "core-js": "^2.4.1",
+    "zone.js": "^0.6.26",
+    "@microsoft/office-js-helpers": "^0.1.8",
+    "jquery": "^3.1.1",
+    "office-ui-fabric": "^2.6.2",
+    "marked": "^0.3.6",
     "to-markdown": "^3.0.2",
-    "underscore": "^1.8.3",
-    "zone.js": "^0.6.26"
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "resolve-url-loader": "^1.6.0",
     "perfectionist": "^2.3.1",
     "node-sass": "^3.10.1",
     "precss": "^1.4.0",
     "autoprefixer": "^6.5.1",
-    "exports-loader": "^0.6.3",
-    "imports-loader": "^0.6.5",
     "angular2-template-loader": "^0.5.0",
     "css-loader": "^0.25.0",
     "postcss-loader": "^1.0.0",
@@ -52,13 +48,12 @@
     "raw-loader": "^0.5.1",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "ts-loader": "^0.9.5",
-    "source-map-loader": "^0.1.5",
     "typescript": "^2.0.3",
     "typings": "^1.4.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2",
     "webpack-merge": "^0.15.0",
-    "copy-webpack-plugin": "^3.0.1"
+    "copy-webpack-plugin": "^3.0.1",
+    "awesome-typescript-loader": "2.2.1"
   }
 }
